[package]
name = "xlsx2json"
version = "0.0.1"
authors = ["Angela-1 <ruoshui_engr@163.com>"]
description = "A command line tool for parse xlsx to json file."
license = "Apache-2.0"
repository = "https://github.com/angela-1/xlsx2json-rs"
keywords = ["xlsx", "json", "serialization"]
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
calamine = "0.15.3"
serde_json = "1.0.37"
clap = "2.32.0"